src/chrome/komodo/skin/partials/scheme-skinning.less
.setVars() when (@dark = 1)
{
    @_background:           lighten(@background, 5%);
    
    @foreground-focus:      lighten(@foreground, 20%);
    @background-contrast:   darken(@_background, 10%);
    @border:                lighten(@_background, 5%);
    @background-button:     lighten(@_background, 5%);
    @background-button-hover:lighten(@_background, 10%);
    @background-odd:        fade(darken(@background-contrast, 3%), 80%);
    @background-input:      lighten(@background-contrast, 10%);
    @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
    @background-selected:   fade(desaturate(@special, 5%), 30%);
}

.setVars() when (@dark = 0)
{
    @_background:           darken(@background, 5%);
    
    @foreground-focus:      darken(@foreground, 10%);
    @background-contrast:   darken(@_background, 5%);
    @border:                darken(@_background, 10%);
    @background-button:     lighten(@_background, 10%);
    @background-button-hover:lighten(@_background, 15%);
    @background-odd:        fade(darken(@background-contrast, 1%), 80%);
    @background-input:      darken(@background-contrast, 10%);
    @background-image:      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
    @background-selected:   desaturate(@special, 5%);
}

.setVars();

@foreground-selected:   contrast(@background-selected);
@special-fore: contrast(@special);

/* Hud */

.hud
{
    background-image: @background-image !important;
    background-color: fade(@background-contrast, 90%) !important;
    color: @foreground !important;
    border-color: @border !important;

    separator
    {
        -moz-appearance: none !important;
        height: 1px !important;
        max-height: 1px !important;
        background: fade(@border, 50%) !important;
    }

    .docked
    {
        background: fade(@border, 50%) !important;
    }

    .special
    {
        background: @special !important;
        color: @special-fore !important;
    }

    scrollbar
    {
        slider
        {
            background: fade(@background-contrast, 100%) !important;
        }

        thumb
        {
            background: darken(@background-contrast, 5%) !important;
        }

        thumb:hover
        {
            background: darken(@background-contrast, 10%) !important;
        }

        &:hover slider
        {
            background: darken(fade(@background-contrast, 100%), 2%) !important;
        }
    }

    richlistitem,
    listitem,
    row
    {
        color: @foreground !important;
        border-color: fade(@border, 0%) !important;

        &[selected="true"]
        {
            color: @foreground-selected !important;
            background: @background-selected !important;
        }

        &[focused]:not([selected="true"])
        {
            color: @foreground-focus !important;
            border-color: @border !important;
        }
    }

    .loader
    {
        background-image: linear-gradient(to right, rgba(0,0,0,0.0) 0, @special 200px, @special 300px, rgba(0,0,0,0.0) 500px) !important;
    }

    textbox:not(.transparent)
    {
        background: @background-input !important;
    }

    textbox
    {
        color: @foreground !important;
    }

    ::-moz-selection {
        color: @special-fore !important;
        background: @special;
    }
    
    :not(button) > button:not(.button-plain)
    {
        background-color: @background-button !important;
        background-image: @background-image !important;
        border: 1px solid @border !important;

        &:hover
        {
            background-color: @background-button-hover !important;
        }
    }

    button:not(.button-plain)
    {
        color: @foreground !important;
    }
}

/* Statusbar */

window:not([view-type="editor"])
{
    statusbar#statusbarviewbox
    {
        visibility: collapse;
    }
}

statusbar#statusbarviewbox
{
    -moz-appearance: none !important;
    background: @background !important;
    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)) !important;
    color: @foreground !important;
    border: 0 !important;
    border-top: 1px solid contrast(@_background, darken(@_background, 10%), lighten(@_background, 10%)) !important;

    statusbarpanel
    {
        -moz-appearance: none !important;
        background: transparent !important;
        border: 0 !important;
        padding: 0 2px 0 !important;
    }


    /* Statusbar Buttons */

    button:not([type="menu"]),
    sectionlist,
    toolbarbutton
    {
        -moz-appearance: none !important;
        background: transparent;
        color: @foreground !important;
        border: 0;
        border-radius: 0 !important;

        margin: 0;
        padding: 0 2px !important;

        & > label
        {
            color: @foreground !important;
        }

        &:hover
        {
            background: fade(darken(@_background, 5%), 60%) !important;
            color: lighten(@foreground, 10%) !important;
        }
    }

    sectionlist textbox
    {
        -moz-appearance: none !important;
        background: lighten(@_background, 5%) !important;
        color: @foreground !important;
        border: 0 !important;
    }

    .statusbar-resizerpanel
    {
        visibility: collapse;
    }

}

#quicklaunch
{
    border: 0;
    background-image: none !important;
}

